# pathtracer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  camera.cpp  camera.h  color.h  geometry.cpp  image.cpp  image.h  main.cpp  mat3.h  mat4.h  rand.h  ray.h  raytracer.cpp  raytracer.h  scene.h  vec3.h  vec4.h
.vcproj/: raytracer.sln  raytracer.vcxproj  raytracer.vcxproj.filters
scripts/: animate.lua  sample.lua  vec3.lua
src/: camera.cpp  camera.h  color.h  concurrency.h  geometry.cpp  geometry.h  image.cpp  image.h  main.cpp  material.cpp  material.h  math.h  pathtracer.cpp  pathtracer.h  rand.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  script.cpp  script.h  vec2.h
